# habit_link

./: .gitignore  Dockerfile  Dockerfile_dev  pyproject.toml
app/: llm_server.py  minimum_streamlit.py  run_llm_server.sh  run_llm_server_local.sh  run_streamlit.py  run_teacher_ui.sh  run_teacher_ui_local.sh  run_ui.sh  run_ui_local.sh  teacher_ui.py  ui.py
app/common/: firestore.py  params.py  utils.py
app/config/: config.json
app/habit_design/: habit_design_500.txt  habit_design_original.txt  habit_design_v2.txt
app/mcp_server/: video_search_mcp_server.py  web_search_mcp_server.py
app/tools/: calendar_test.py  count_token.py  firebase_test.py  full_calendar.py  get_spread_sheet.py  timezone.py
app/vector_db/: create_index_from_spread_sheet.py  csv2json.py  faiss_create_index.py  faiss_query.py  merge_index.py  preprocessing.py  youtube_search.py
app/vector_db/faiss_index/: index.faiss  index.pkl
